  * Add --without-pidgin option to ./configure for building just prpltwtr and not gtkprpltwtr. Note that the prpltwtr.so is now installed in the libpurple plugin directory! Please manually delete the old one from pidgin's plugin directory.
  * Basic favorites support. The action menu is NOT updated, though, after favoriting / unfavoriting a tweet.

Changelog for 0.6.4:
  * Show the error texts from twitter when displaying an error. Should make it easier to understand things like why DMs fail.
  * Don't retreive old tweets when rejoining a search. Behaviour is now similar to a regular timeline.
  * Allow customization of the insertion of the search text in tweets: never, prepended, or appended (set on a per-search basis). Default is never.
  * Show rate limit status as the topic for chats and timeline(s)
  * Makefile changes, added support for localization. So far, just Spanish has been added.
  * List support. Not tested extensively, and probably broken for Haze / Empathy, but seems to work fairly well in Pidgin. Some code cleanup still needs to be done.

Changelog for 0.6.3:
  * Fix make install target

Changelog for 0.6.2:
  * Add a "report spammer" link
  * Initial "Conversation" support available. Click on "In reply to..." and the parent tweet will be retrieve. It's currently delivered just like any other tweet; if it's from an IM session, it will be shown in a new IM window; if it's from a chat window, it will be shown at the bottom. I don't like this, but I don't have anything better at the moment.
  * More sensible login defaults; HTTPS, OAuth, password is optional (not required when using OAuth)
  * Snowflake API update; don't assume tweet_id's are sequential. This could have resulted in missing some tweets.
  * Fix the Makefile.mingw dependency bug where foo.dll wasn't being rebuilt. Note that there is no support for header dependencies; the pidgin makefiles, which we use, do not support them. If you change a head files, run make clean all